# KeyTool

./: LICENSE  Readme.md
KeyTool_Upper_computer/: CMakeLists.txt  Main.qml  README_qt.md  Update_log.md  customizetitle.cpp  customizetitle.h  img_source.qrc  keymapping.h  main.cpp  myserial.cpp  myserial.h  winmsg.h
KeyTool_Upper_computer/import_qm_file/app_qml/: AppInterface.qml  BottomFunc.qml  ConnectIndications.qml  LeftToggle.qml  ModelShow.qml  SetPage.qml
KeyTool_Upper_computer/import_qm_file/app_qml/BottomFunc_page/: BFpage1.qml  BFpage1_keyshow.qml  BFpage2.qml  BFpage2_keyset.qml  ConversionTable.qml
KeyTool_Upper_computer/import_qm_file/window_qml/: TitleBar.qml
KeyTool_Upper_computer/resource/GameToll/: GameToll.qml  Keym.qml
KeyTool_Upper_computer/resource/GameToll/meshes/: ___mesh.mesh
KeyTool_embedded/: CMakeLists.txt  QML_KEYVALUE.md  README.md  README_esp.md  Update_log.md  text.md
KeyTool_embedded/components/Device_fun/: CMakeLists.txt  device_nvs.c  device_uart.c  device_usb_hid.c
KeyTool_embedded/components/Device_fun/include/: Device_fun.h
KeyTool_embedded/components/button/: CMakeLists.txt  _74hc165_button.c  device_spi.c
KeyTool_embedded/components/button/include/: _74hc165_button.h  base_button.h
KeyTool_embedded/components/driver_ws2812/: CMakeLists.txt  driver_ws2812.c
KeyTool_embedded/components/driver_ws2812/include/: driver_ws2812.h
KeyTool_embedded/main/: main.c
remove_build/: Readme.md  remove_build.cpp  remove_build.sln  remove_build.vcxproj  remove_build.vcxproj.filters
